# jazz-patterns

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PUBLICATION-IDEAS.md  README.md  SCALE-INVENTORY.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: build-book.yml  demo-video.yml  deploy-web.yml
common/: pyproject.toml
common/src/jazz_common/: __init__.py  lilypond.py  pitch.py
projects/blues/: README.md  build.sh  pyproject.toml
projects/blues/src/jazz_blues/: __init__.py  blues_take_1.py
projects/presentation/: .gitignore  README.md  package-lock.json  package.json  slides.md  theme.css
projects/presentation/tools/: render-lilypond.sh  render-notation.sh  shoot.mjs
projects/presentation/tools/snippets/: cmajor.ly  pentb5.ly
projects/scales/: README.md  build.sh  pyproject.toml
projects/scales/src/jazz_scales/: __init__.py  book.py  book_single.py  export_json.py  fetch_salamander_soundfont.sh  generate_single.py  generator.py
projects/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/web/public/: CNAME
projects/web/src/: main.ts  notation.ts  offline.ts  player.ts  sequence.ts  vite-env.d.ts
projects/web/src/data/: scales.json  scales.ts
projects/web/tools/demo/: README.md  make-demo.mjs  package-lock.json  package.json
scripts/: generate_scales.py  jazz_scales_abjad_keys.py  make_book_keys.py  make_cover.py
src/: jazz_scales_abjad_keys.py.txt
src/jazz_scales/: blues_take_1.py  book.py  cover.py  generate_single.py  generator.py  render_wavs.sh
