[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jazz-blues"
version = "0.1.0"
description = "Annotated jazz blues studies generated with Abjad and LilyPond"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.9"
authors = [
    { name = "George K. Thiruvathukal" },
]
keywords = ["jazz", "blues", "music", "abjad", "lilypond", "notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
# jazz-common is a path dependency installed by build.sh / CI, not from an index.
dependencies = [
    "abjad>=3.31",
]

[project.urls]
Homepage = "https://github.com/gkthiruvathukal/jazz-patterns"
Repository = "https://github.com/gkthiruvathukal/jazz-patterns"

[tool.hatch.build.targets.wheel]
packages = ["src/jazz_blues"]
